--- a/librec/demo/config/SVD++.conf
+++ b/librec/demo/config/SVD++.conf
@@ -1,16 +1,16 @@
-dataset.ratings.wins=/Users/nazar/IdeaProjects/gb/data/ratings.txt
-dataset.ratings.lins=/Users/nazar/IdeaProjects/gb/data/ratings.txt
+dataset.ratings.wins=/home/nazar/gb/data/ratings.txt
+dataset.ratings.lins=/home/nazar/gb/data/ratings.txt
 
 ratings.setup=-columns 0 1 2 -threshold -1
 
-recommender=SVD++
+recommender=PMF
 evaluation.setup=cv -k 4 -p on --rand-seed 1 --test-view all
 item.ranking=off -topN -1 -ignore -1
 
-num.factors=5
-num.max.iter=10
+num.factors=10
+num.max.iter=50
 
 learn.rate=0.01 -max -1 -bold-driver
 reg.lambda=0.1 -u 0.1 -i 0.1 -b 0.1 -s 0.001
 
-output.setup=on -dir /Users/nazar/librec/librec/Results
+output.setup=on -dir /home/nazar/gb/librec/Results
