--- a/librec/demo/config/TrustSVD.conf
+++ b/librec/demo/config/TrustSVD.conf
@@ -1,19 +1,19 @@
-dataset.ratings.wins=.\\demo\\Datasets\\FilmTrust\\ratings.txt
-dataset.ratings.lins=./demo/Datasets/FilmTrust/ratings.txt
+dataset.ratings.wins=/home/nazar/gb/data/ratings.txt
+dataset.ratings.lins=/home/nazar/gb/data/ratings.txt
 
-dataset.social.wins=.\\demo\\Datasets\\FilmTrust\\trust.txt
-dataset.social.lins=./Datasets/FilmTrust/trust.txt
+dataset.social.wins=/home/nazar/gb/data/trust.txt
+dataset.social.lins=/home/nazar/gb/data/trust.txt
 
 ratings.setup=-columns 0 1 2 -threshold -1
 
-recommender=TrustSVD
-evaluation.setup=cv -k 5 -p on --rand-seed 1 --test-view all
+recommender=socialmf
+evaluation.setup=cv -k 4 -p on --rand-seed 1 --test-view all
 item.ranking=off -topN -1 -ignore -1
 
 num.factors=10
-num.max.iter=100
+num.max.iter=30
 
 learn.rate=0.01 -max -1 -bold-driver
 reg.lambda=0.1 -u 1.2 -i 1.2 -b 1.2 -s 0.9
 
-output.setup=on -dir ./demo/Results/
+output.setup=on -dir /home/nazar/gb/librec/Results
