--- a/librec/demo/config/WRMF.conf
+++ b/librec/demo/config/WRMF.conf
@@ -1,18 +1,18 @@
-dataset.ratings.wins=.\\demo\\Datasets\\FilmTrust\\ratings.txt
-dataset.ratings.lins=./demo/Datasets/FilmTrust/ratings.txt
+dataset.ratings.wins=/home/nazar/gb/data/ratings.txt
+dataset.ratings.lins=/home/nazar/gb/data/ratings.txt
 
 ratings.setup=-columns 0 1 2 -threshold 0
 
 recommender=WRMF
 evaluation.setup=cv -k 5 -p on --rand-seed 1 --test-view all
-item.ranking=on -topN -1 -ignore -1
+item.ranking=off -topN -1 -ignore -1
 
 num.factors=10
-num.max.iter=30
+num.max.iter=20
 
 learn.rate=0.001 -max -1 -bold-driver
 reg.lambda=0.1 -u 0.001 -i 0.001 -b 0.001
 
 WRMF=-alpha 1
 
-output.setup=on -dir ./demo/Results/
+output.setup=on -dir /home/nazar/gb/librec/Results
